# wasm-led

./: .gitignore  Cargo.toml  build.sh  flake.nix  guest.component.wasm
compiler/: Cargo.toml
compiler/src/: main.rs
firmware/: Cargo.toml
firmware/compiler/src/: main.rs
firmware/guest/src/: lib.rs
firmware/host/: Cargo.toml  memory.x
firmware/host/.cargo/: config.toml
firmware/host/src/: core0_networking.rs  core1_wasm.rs  main.rs
firmware/wit/: ws2812.wit
guest/: Cargo.toml
guest/src/: lib.rs
guest/wit/: world.wit
host/: Cargo.toml  memory.x
host/src/: core0_networking.rs  guest.pulley  main.rs
lib/host/delay/: Cargo.toml
lib/host/delay/src/: lib.rs
lib/host/ws2812/: Cargo.toml
lib/host/ws2812/src/: lib.rs
src/: main.rs
wit/: delay.wit  ws2812.wit
