[package]
name = "host"
version = "0.2.0"
edition = "2024"

[dependencies]
smart-leds = "0.4.0"
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "defmt",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.10.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-futures = "0.1.2"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0"

embedded-alloc = "0.7.0"
embedded-io-async = "0.7.0"
embedded-storage-async = "0.4.0"
wasmtime = { version = "41.0.1", default-features = false, features = ["runtime", "pulley", "component-model"] }

host-ws2812 = { path = "../lib/host/ws2812" }
host-delay = { path = "../lib/host/delay" }

cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }
embassy-net = { version = "0.9.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
static_cell = "2.1.0"

[[bin]]
name = "host"
test = false
bench = false
